--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-crossterm = "0.29.0"
+crossterm = { version="0.29.0", features=["event-stream"] }
+futures = "0.3.31"
 ratatui = "0.29.0"
 reqwest = "0.12.23"
 serde = "1.0.228"
